G1: region attribute remembered set state disagrees with actual remembered set state

XMLWordPrintable

    • gc
    • b25
    • Not verified

        Sporadically failing assertion was observed on PPC64 and x86_64:
        assert(region_attr.needs_remset_update() == hr_obj->rem_set()->is_tracked()) failed: State flag indicating remset tracking disagrees (false) with actual remembered set (true) for region 62
        with region:
        | 62|0x00000000f3e00000, 0x00000000f3f00000, 0x00000000f3f00000|100%| O| |TAMS 0x00000000f3f00000, 0x00000000f3e00000| Complete

        The assertion was introduced by JDK-8200545, but this behavior may be older.

        Failing test on x86:
        jck: api/java_text/NumberFormat/UnicodeExtensions
        ran with -Xcomp -XX:-TieredCompilation and -Xms128m -Xmx288m.

              Assignee:
              Thomas Schatzl
              Reporter:
              Thomas Schatzl
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: