8225418: G1: region attribute remembered set state disagrees with actual remembered set state

Keep remembered set update information when updating region attributes when abandoning the remaining collection set after mixed gc.

Reviewed-by: kbarrett, mdoerr